Estilizando componente Header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="header__dark-mode-label">Dark Mode</p>
                 
             <label class="header__dark-mode-switch">
-                <input type="checkbox">
+                <input class="checkbox" type="checkbox">
                 <span class="header__slider"></span>
             </label>
         </div>
