--- a/index.html
+++ b/index.html
@@ -41,12 +41,43 @@
                     <h4 class="card__today-count">12 Today</h4>
                 </div>
             </article>
+
+            <article class="card">
+                <div class="card__info">
+                    <span class="card__icon"></span>
+                    <p class="card__username">@nathanf</p>
+                </div>
+
+                <h3 class="card__followers">1987</h3>
+                <p class="card__followers-label">Followers</p>
+
+                <div class="card__today">
+                    <span class="card__icon"></span>
+                    <h4 class="card__today-count">12 Today</h4>
+                </div>
+            </article>
         </section>
 
         <section class="overview-section" aria-label="Overview Card Section">
             <h2 class="overview-section__title">Overview - Today</h2>
 
             <div class="card__container">
+                <article class="card">
+                    <div class="card__info">
+                        <p class="card__label">Page Views</p>
+                        <span class="card__icon"></span>
+                    </div>
+
+                    <div class="card__data">
+                        <h3 class="card__value">87</h3>
+
+                        <div class="card__change">
+                            <span class="card__icon"></span>
+                            <h4 class="card__percentage">3%</h4>
+                        </div>
+                    </div>
+                </article>
+
                 <article class="card">
                     <div class="card__info">
                         <p class="card__label">Page Views</p>
