Reutilizando estilizações e implementando evento de click

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="card-section" aria-label="Card Section">
             <article class="card <!--light-->">
                 <div class="card__info">
-                    <span class="card__icon"></span>
+                    <span class="card__icon icon-facebook"></span>
                     <p class="card__username <!--light-->">@nathanf</p>
                 </div>
 
@@ -37,14 +37,14 @@
                 <p class="card__followers-label <!--light-->">Followers</p>
 
                 <div class="card__today">
-                    <span class="card__icon"></span>
-                    <h4 class="card__today-count <!--light-->">12 Today</h4>
+                    <span class="card__icon icon-up"></span>
+                    <h4 class="card__today-count up">12 Today</h4>
                 </div>
             </article>
 
             <article class="card <!--light-->">
                 <div class="card__info">
-                    <span class="card__icon"></span>
+                    <span class="card__icon icon-twitter"></span>
                     <p class="card__username <!--light-->">@nathanf</p>
                 </div>
 
@@ -52,14 +52,14 @@
                 <p class="card__followers-label <!--light-->">Followers</p>
 
                 <div class="card__today">
-                    <span class="card__icon"></span>
-                    <h4 class="card__today-count <!--light-->">12 Today</h4>
+                    <span class="card__icon icon-up"></span>
+                    <h4 class="card__today-count up">12 Today</h4>
                 </div>
             </article>
 
             <article class="card <!--light-->">
                 <div class="card__info">
-                    <span class="card__icon"></span>
+                    <span class="card__icon icon-instagram"></span>
                     <p class="card__username <!--light-->">@nathanf</p>
                 </div>
 
@@ -67,14 +67,14 @@
                 <p class="card__followers-label <!--light-->">Followers</p>
 
                 <div class="card__today">
-                    <span class="card__icon"></span>
-                    <h4 class="card__today-count <!--light-->">12 Today</h4>
+                    <span class="card__icon icon-up"></span>
+                    <h4 class="card__today-count up">12 Today</h4>
                 </div>
             </article>
 
             <article class="card <!--light-->">
                 <div class="card__info">
-                    <span class="card__icon"></span>
+                    <span class="card__icon icon-youtube "></span>
                     <p class="card__username <!--light-->">@nathanf</p>
                 </div>
 
@@ -82,8 +82,8 @@
                 <p class="card__followers-label <!--light-->">Followers</p>
 
                 <div class="card__today">
-                    <span class="card__icon"></span>
-                    <h4 class="card__today-count <!--light-->">12 Today</h4>
+                    <span class="card__icon icon-down"></span>
+                    <h4 class="card__today-count down">12 Today</h4>
                 </div>
             </article>
         </section>
@@ -95,15 +95,15 @@
                 <article class="card <!--light-->">
                     <div class="card__info">
                         <p class="card__label <!--light-->">Page Views</p>
-                        <span class="card__icon"></span>
+                        <span class="card__icon icon-facebook"></span>
                     </div>
 
                     <div class="card__data">
                         <h3 class="card__value <!--light-->">87</h3>
 
                         <div class="card__change">
-                            <span class="card__icon"></span>
-                            <h4 class="card__percentage">3%</h4>
+                            <span class="card__icon icon-up"></span>
+                            <h4 class="card__percentage up">3%</h4>
                         </div>
                     </div>
                 </article>
@@ -111,15 +111,15 @@
                 <article class="card <!--light-->">
                     <div class="card__info">
                         <p class="card__label <!--light-->">Page Views</p>
-                        <span class="card__icon"></span>
+                        <span class="card__icon icon-facebook"></span>
                     </div>
 
                     <div class="card__data">
                         <h3 class="card__value <!--light-->">87</h3>
 
                         <div class="card__change">
-                            <span class="card__icon"></span>
-                            <h4 class="card__percentage">3%</h4>
+                            <span class="card__icon icon-down"></span>
+                            <h4 class="card__percentage down">3%</h4>
                         </div>
                     </div>
                 </article>
@@ -127,15 +127,15 @@
                 <article class="card <!--light-->">
                     <div class="card__info">
                         <p class="card__label <!--light-->">Page Views</p>
-                        <span class="card__icon"></span>
+                        <span class="card__icon icon-instagram"></span>
                     </div>
 
                     <div class="card__data">
                         <h3 class="card__value <!--light-->">87</h3>
 
                         <div class="card__change">
-                            <span class="card__icon"></span>
-                            <h4 class="card__percentage">3%</h4>
+                            <span class="card__icon icon-up"></span>
+                            <h4 class="card__percentage up">3%</h4>
                         </div>
                     </div>
                 </article>
@@ -143,15 +143,15 @@
                 <article class="card <!--light-->">
                     <div class="card__info">
                         <p class="card__label <!--light-->">Page Views</p>
-                        <span class="card__icon"></span>
+                        <span class="card__icon icon-instagram"></span>
                     </div>
 
                     <div class="card__data">
                         <h3 class="card__value <!--light-->">87</h3>
 
                         <div class="card__change">
-                            <span class="card__icon"></span>
-                            <h4 class="card__percentage">3%</h4>
+                            <span class="card__icon icon-up"></span>
+                            <h4 class="card__percentage up">3%</h4>
                         </div>
                     </div>
                 </article>
@@ -159,15 +159,15 @@
                 <article class="card <!--light-->">
                     <div class="card__info">
                         <p class="card__label <!--light-->">Page Views</p>
-                        <span class="card__icon"></span>
+                        <span class="card__icon icon-twitter"></span>
                     </div>
 
                     <div class="card__data">
                         <h3 class="card__value <!--light-->">87</h3>
 
                         <div class="card__change">
-                            <span class="card__icon"></span>
-                            <h4 class="card__percentage">3%</h4>
+                            <span class="card__icon icon-up"></span>
+                            <h4 class="card__percentage up">3%</h4>
                         </div>
                     </div>
                 </article>
@@ -175,15 +175,15 @@
                 <article class="card <!--light-->">
                     <div class="card__info">
                         <p class="card__label <!--light-->">Page Views</p>
-                        <span class="card__icon"></span>
+                        <span class="card__icon icon-twitter"></span>
                     </div>
 
                     <div class="card__data">
                         <h3 class="card__value <!--light-->">87</h3>
 
                         <div class="card__change">
-                            <span class="card__icon"></span>
-                            <h4 class="card__percentage">3%</h4>
+                            <span class="card__icon icon-up"></span>
+                            <h4 class="card__percentage up">3%</h4>
                         </div>
                     </div>
                 </article>
@@ -191,15 +191,15 @@
                 <article class="card <!--light-->">
                     <div class="card__info">
                         <p class="card__label <!--light-->">Page Views</p>
-                        <span class="card__icon"></span>
+                        <span class="card__icon icon-youtube"></span>
                     </div>
 
                     <div class="card__data">
                         <h3 class="card__value <!--light-->">87</h3>
 
                         <div class="card__change">
-                            <span class="card__icon"></span>
-                            <h4 class="card__percentage">3%</h4>
+                            <span class="card__icon icon-down"></span>
+                            <h4 class="card__percentage down">3%</h4>
                         </div>
                     </div>
                 </article>
@@ -207,15 +207,15 @@
                 <article class="card <!--light-->">
                     <div class="card__info">
                         <p class="card__label <!--light-->">Page Views</p>
-                        <span class="card__icon"></span>
+                        <span class="card__icon icon-youtube"></span>
                     </div>
 
                     <div class="card__data">
                         <h3 class="card__value <!--light-->">87</h3>
 
                         <div class="card__change">
-                            <span class="card__icon"></span>
-                            <h4 class="card__percentage">3%</h4>
+                            <span class="card__icon icon-down"></span>
+                            <h4 class="card__percentage down">3%</h4>
                         </div>
                     </div>
                 </article>
