Finalizando estilização dos cards

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="assets/css/1-base/base.css">
     <title>Frontend Mentor | Social media dashboard with theme switcher</title>
 </head>
-<body class="<!--light-->">
-    <header class="header <!--light-->">
-        <div class="header__branding <!--light-->">
-            <h2 class="header__title <!--light-->">Social Media Dashboard</h2>
-            <p class="header__followers <!--light-->">Total Followers: 23,004</p>
+<body>
+    <header class="header">
+        <div class="header__branding">
+            <h2 class="header__title">Social Media Dashboard</h2>
+            <p class="header__followers">Total Followers: 23,004</p>
         </div>
 
         <div class="header__dark-mode">
-            <p class="header__dark-mode-label <!--light-->">Dark Mode</p>
+            <p class="header__dark-mode-label">Dark Mode</p>
                 
-            <label class="header__dark-mode-switch <!--light-->">
-                <input class="checkbox <!--light-->" type="checkbox">
+            <label class="header__dark-mode-switch">
+                <input class="checkbox" type="checkbox">
                 <span class="header__slider"></span>
             </label>
         </div>
@@ -27,14 +27,14 @@
 
     <main class="main">
         <section class="card-section" aria-label="Card Section">
-            <article class="card <!--light-->">
+            <article class="card facebook">
                 <div class="card__info">
                     <span class="card__icon icon-facebook"></span>
-                    <p class="card__username <!--light-->">@nathanf</p>
+                    <p class="card__username">@nathanf</p>
                 </div>
 
-                <h3 class="card__followers <!--light-->">1987</h3>
-                <p class="card__followers-label <!--light-->">Followers</p>
+                <h3 class="card__followers">1987</h3>
+                <p class="card__followers-label">Followers</p>
 
                 <div class="card__today">
                     <span class="card__icon icon-up"></span>
@@ -42,14 +42,14 @@
                 </div>
             </article>
 
-            <article class="card <!--light-->">
+            <article class="card twitter">
                 <div class="card__info">
                     <span class="card__icon icon-twitter"></span>
-                    <p class="card__username <!--light-->">@nathanf</p>
+                    <p class="card__username">@nathanf</p>
                 </div>
 
-                <h3 class="card__followers <!--light-->">1987</h3>
-                <p class="card__followers-label <!--light-->">Followers</p>
+                <h3 class="card__followers">1987</h3>
+                <p class="card__followers-label">Followers</p>
 
                 <div class="card__today">
                     <span class="card__icon icon-up"></span>
@@ -57,14 +57,14 @@
                 </div>
             </article>
 
-            <article class="card <!--light-->">
+            <article class="card instagram">
                 <div class="card__info">
                     <span class="card__icon icon-instagram"></span>
-                    <p class="card__username <!--light-->">@nathanf</p>
+                    <p class="card__username">@nathanf</p>
                 </div>
 
-                <h3 class="card__followers <!--light-->">1987</h3>
-                <p class="card__followers-label <!--light-->">Followers</p>
+                <h3 class="card__followers">1987</h3>
+                <p class="card__followers-label">Followers</p>
 
                 <div class="card__today">
                     <span class="card__icon icon-up"></span>
@@ -72,14 +72,14 @@
                 </div>
             </article>
 
-            <article class="card <!--light-->">
+            <article class="card youtube">
                 <div class="card__info">
                     <span class="card__icon icon-youtube "></span>
-                    <p class="card__username <!--light-->">@nathanf</p>
+                    <p class="card__username">@nathanf</p>
                 </div>
 
-                <h3 class="card__followers <!--light-->">1987</h3>
-                <p class="card__followers-label <!--light-->">Followers</p>
+                <h3 class="card__followers">1987</h3>
+                <p class="card__followers-label">Followers</p>
 
                 <div class="card__today">
                     <span class="card__icon icon-down"></span>
@@ -89,17 +89,17 @@
         </section>
 
         <section class="overview-section" aria-label="Overview Card Section">
-            <h2 class="overview-section__title <!--light-->">Overview - Today</h2>
+            <h2 class="overview-section__title">Overview - Today</h2>
 
             <div class="card__container">
-                <article class="card <!--light-->">
+                <article class="card">
                     <div class="card__info">
-                        <p class="card__label <!--light-->">Page Views</p>
+                        <p class="card__label">Page Views</p>
                         <span class="card__icon icon-facebook"></span>
                     </div>
 
                     <div class="card__data">
-                        <h3 class="card__value <!--light-->">87</h3>
+                        <h3 class="card__value">87</h3>
 
                         <div class="card__change">
                             <span class="card__icon icon-up"></span>
@@ -108,14 +108,14 @@
                     </div>
                 </article>
 
-                <article class="card <!--light-->">
+                <article class="card">
                     <div class="card__info">
-                        <p class="card__label <!--light-->">Page Views</p>
+                        <p class="card__label">Page Views</p>
                         <span class="card__icon icon-facebook"></span>
                     </div>
 
                     <div class="card__data">
-                        <h3 class="card__value <!--light-->">87</h3>
+                        <h3 class="card__value">87</h3>
 
                         <div class="card__change">
                             <span class="card__icon icon-down"></span>
@@ -124,14 +124,14 @@
                     </div>
                 </article>
 
-                <article class="card <!--light-->">
+                <article class="card">
                     <div class="card__info">
-                        <p class="card__label <!--light-->">Page Views</p>
+                        <p class="card__label">Page Views</p>
                         <span class="card__icon icon-instagram"></span>
                     </div>
 
                     <div class="card__data">
-                        <h3 class="card__value <!--light-->">87</h3>
+                        <h3 class="card__value">87</h3>
 
                         <div class="card__change">
                             <span class="card__icon icon-up"></span>
@@ -140,14 +140,14 @@
                     </div>
                 </article>
 
-                <article class="card <!--light-->">
+                <article class="card">
                     <div class="card__info">
-                        <p class="card__label <!--light-->">Page Views</p>
+                        <p class="card__label">Page Views</p>
                         <span class="card__icon icon-instagram"></span>
                     </div>
 
                     <div class="card__data">
-                        <h3 class="card__value <!--light-->">87</h3>
+                        <h3 class="card__value">87</h3>
 
                         <div class="card__change">
                             <span class="card__icon icon-up"></span>
@@ -156,14 +156,14 @@
                     </div>
                 </article>
 
-                <article class="card <!--light-->">
+                <article class="card">
                     <div class="card__info">
-                        <p class="card__label <!--light-->">Page Views</p>
+                        <p class="card__label">Page Views</p>
                         <span class="card__icon icon-twitter"></span>
                     </div>
 
                     <div class="card__data">
-                        <h3 class="card__value <!--light-->">87</h3>
+                        <h3 class="card__value">87</h3>
 
                         <div class="card__change">
                             <span class="card__icon icon-up"></span>
@@ -172,14 +172,14 @@
                     </div>
                 </article>
 
-                <article class="card <!--light-->">
+                <article class="card">
                     <div class="card__info">
-                        <p class="card__label <!--light-->">Page Views</p>
+                        <p class="card__label">Page Views</p>
                         <span class="card__icon icon-twitter"></span>
                     </div>
 
                     <div class="card__data">
-                        <h3 class="card__value <!--light-->">87</h3>
+                        <h3 class="card__value">87</h3>
 
                         <div class="card__change">
                             <span class="card__icon icon-up"></span>
@@ -188,14 +188,14 @@
                     </div>
                 </article>
 
-                <article class="card <!--light-->">
+                <article class="card">
                     <div class="card__info">
-                        <p class="card__label <!--light-->">Page Views</p>
+                        <p class="card__label">Page Views</p>
                         <span class="card__icon icon-youtube"></span>
                     </div>
 
                     <div class="card__data">
-                        <h3 class="card__value <!--light-->">87</h3>
+                        <h3 class="card__value">87</h3>
 
                         <div class="card__change">
                             <span class="card__icon icon-down"></span>
@@ -204,14 +204,14 @@
                     </div>
                 </article>
 
-                <article class="card <!--light-->">
+                <article class="card">
                     <div class="card__info">
-                        <p class="card__label <!--light-->">Page Views</p>
+                        <p class="card__label">Page Views</p>
                         <span class="card__icon icon-youtube"></span>
                     </div>
 
                     <div class="card__data">
-                        <h3 class="card__value <!--light-->">87</h3>
+                        <h3 class="card__value">87</h3>
 
                         <div class="card__change">
                             <span class="card__icon icon-down"></span>
