Criando cards dinamicos com dados json

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main class="main">
         <section class="card-section" aria-label="Card Section">
-            <article class="card facebook">
+            <!-- <article class="card facebook">
                 <div class="card__info">
                     <span class="card__icon icon-facebook"></span>
                     <p class="card__username">@nathanf</p>
@@ -85,7 +85,7 @@
                     <span class="card__icon icon-down"></span>
                     <h4 class="card__today-count down">12 Today</h4>
                 </div>
-            </article>
+            </article> -->
         </section>
 
         <section class="overview-section" aria-label="Overview Card Section">
