Criando cards da seção Overview de maneira dinâmica e adicionando estilizações finais

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2 class="overview-section__title">Overview - Today</h2>
 
             <div class="card__container">
-                <article class="card">
+                <!-- <article class="card">
                     <div class="card__info">
                         <p class="card__label">Page Views</p>
                         <span class="card__icon icon-facebook"></span>
@@ -218,7 +218,7 @@
                             <h4 class="card__percentage down">3%</h4>
                         </div>
                     </div>
-                </article>
+                </article> -->
             </div>
         </section>
     </main>
