Debbugando código html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
 
         <div class="header__dark-mode">
-            <p class="header__dark-mode-label">Dark Mode</p>
+            <label class="header__dark-mode-label" for="checkbox">Dark Mode</label>
                 
             <label class="header__dark-mode-switch">
-                <input class="checkbox" type="checkbox">
+                <input class="checkbox" type="checkbox" id="checkbox">
                 <span class="header__slider"></span>
             </label>
         </div>
